src/libqpainter.h

typedef QPainter::PixmapFragment QPainter__PixmapFragment;
typedef struct QImage QImage;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPainter__PixmapFragment QPainter__PixmapFragment;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QRect QRect;
typedef struct QRectF QRectF;
typedef struct QRegion QRegion;
typedef struct QTextOption QTextOption;
typedef struct QTransform QTransform;
void QPainter_SetClipRect5(QPainter* self, int x, int y, int w, int h, int op);
void QPainter_SetClipRegion2(QPainter* self, QRegion* param1, int op);
void QPainter_SetClipPath2(QPainter* self, QPainterPath* path, int op);
void QPainter_SetTransform2(QPainter* self, QTransform* transform, bool combine);
void QPainter_SetWorldTransform2(QPainter* self, QTransform* matrix, bool combine);
void QPainter_DrawPolygon32(QPainter* self, QPointF* points, int pointCount, int fillRule);
void QPainter_DrawPolygon33(QPainter* self, QPoint* points, int pointCount, int fillRule);
void QPainter_DrawRoundedRect4(QPainter* self, QRectF* rect, double xRadius, double yRadius, int mode);
void QPainter_DrawRoundedRect7(QPainter* self, int x, int y, int w, int h, double xRadius, double yRadius, int mode);
void QPainter_DrawRoundedRect42(QPainter* self, QRect* rect, double xRadius, double yRadius, int mode);
void QPainter_DrawTiledPixmap32(QPainter* self, QRectF* rect, QPixmap* pm, QPointF* offset);
void QPainter_DrawTiledPixmap6(QPainter* self, int x, int y, int w, int h, QPixmap* param5, int sx);
void QPainter_DrawTiledPixmap7(QPainter* self, int x, int y, int w, int h, QPixmap* param5, int sx, int sy);
void QPainter_DrawTiledPixmap33(QPainter* self, QRect* param1, QPixmap* param2, QPoint* param3);
void QPainter_DrawPixmapFragments4(QPainter* self, QPainter__PixmapFragment* fragments, int fragmentCount, QPixmap* pixmap, int hints);
void QPainter_DrawImage42(QPainter* self, QRectF* targetRect, QImage* image, QRectF* sourceRect, int flags);
void QPainter_DrawImage43(QPainter* self, QRect* targetRect, QImage* image, QRect* sourceRect, int flags);
void QPainter_DrawImage44(QPainter* self, QPointF* p, QImage* image, QRectF* sr, int flags);
void QPainter_DrawImage45(QPainter* self, QPoint* p, QImage* image, QRect* sr, int flags);
void QPainter_DrawImage46(QPainter* self, int x, int y, QImage* image, int sx);
void QPainter_DrawImage52(QPainter* self, int x, int y, QImage* image, int sx, int sy);
void QPainter_DrawImage62(QPainter* self, int x, int y, QImage* image, int sx, int sy, int sw);
void QPainter_DrawImage72(QPainter* self, int x, int y, QImage* image, int sx, int sy, int sw, int sh);
void QPainter_DrawImage82(QPainter* self, int x, int y, QImage* image, int sx, int sy, int sw, int sh, int flags);
void QPainter_DrawText42(QPainter* self, QRectF* r, int flags, libqt_string text, QRectF* br);
void QPainter_DrawText43(QPainter* self, QRect* r, int flags, libqt_string text, QRect* br);
void QPainter_DrawText72(QPainter* self, int x, int y, int w, int h, int flags, libqt_string text, QRect* br);
void QPainter_DrawText32(QPainter* self, QRectF* r, libqt_string text, QTextOption* o);
QRectF* QPainter_BoundingRect32(QPainter* self, QRectF* rect, libqt_string text, QTextOption* o);
void QPainter_SetRenderHint2(QPainter* self, int hint, bool on);
void QPainter_SetRenderHints2(QPainter* self, int hints, bool on);
QPainter__PixmapFragment* QPainter__PixmapFragment_Create(QPointF* pos, QRectF* sourceRect);
QPainter__PixmapFragment* QPainter__PixmapFragment_Create3(QPointF* pos, QRectF* sourceRect, double scaleX);
QPainter__PixmapFragment* QPainter__PixmapFragment_Create4(QPointF* pos, QRectF* sourceRect, double scaleX, double scaleY);
QPainter__PixmapFragment* QPainter__PixmapFragment_Create5(QPointF* pos, QRectF* sourceRect, double scaleX, double scaleY, double rotation);
QPainter__PixmapFragment* QPainter__PixmapFragment_Create6(QPointF* pos, QRectF* sourceRect, double scaleX, double scaleY, double rotation, double opacity);