src/qt/libqpainter.bf

	[LinkName("QPainter_SetClipRect5")]
	public static extern void QPainter_SetClipRect5(Self* c_this, int32 x, int32 y, int32 w, int32 h, int64 op);
	[LinkName("QPainter_SetClipRegion2")]
	public static extern void QPainter_SetClipRegion2(Self* c_this, QRegion* param1, int64 op);
	[LinkName("QPainter_SetClipPath2")]
	public static extern void QPainter_SetClipPath2(Self* c_this, QPainterPath* path, int64 op);
	[LinkName("QPainter_SetTransform2")]
	public static extern void QPainter_SetTransform2(Self* c_this, QTransform* transform, bool combine);
	[LinkName("QPainter_SetWorldTransform2")]
	public static extern void QPainter_SetWorldTransform2(Self* c_this, QTransform* matrix, bool combine);
	[LinkName("QPainter_DrawPolygon32")]
	public static extern void QPainter_DrawPolygon32(Self* c_this, QPointF* points, int32 pointCount, int64 fillRule);
	[LinkName("QPainter_DrawPolygon33")]
	public static extern void QPainter_DrawPolygon33(Self* c_this, QPoint* points, int32 pointCount, int64 fillRule);
	[LinkName("QPainter_DrawRoundedRect4")]
	public static extern void QPainter_DrawRoundedRect4(Self* c_this, QRectF* rect, double xRadius, double yRadius, int64 mode);
	[LinkName("QPainter_DrawRoundedRect7")]
	public static extern void QPainter_DrawRoundedRect7(Self* c_this, int32 x, int32 y, int32 w, int32 h, double xRadius, double yRadius, int64 mode);
	[LinkName("QPainter_DrawRoundedRect42")]
	public static extern void QPainter_DrawRoundedRect42(Self* c_this, QRect* rect, double xRadius, double yRadius, int64 mode);
	[LinkName("QPainter_DrawTiledPixmap32")]
	public static extern void QPainter_DrawTiledPixmap32(Self* c_this, QRectF* rect, QPixmap* pm, QPointF* offset);
	[LinkName("QPainter_DrawTiledPixmap6")]
	public static extern void QPainter_DrawTiledPixmap6(Self* c_this, int32 x, int32 y, int32 w, int32 h, QPixmap* param5, int32 sx);
	[LinkName("QPainter_DrawTiledPixmap7")]
	public static extern void QPainter_DrawTiledPixmap7(Self* c_this, int32 x, int32 y, int32 w, int32 h, QPixmap* param5, int32 sx, int32 sy);
	[LinkName("QPainter_DrawTiledPixmap33")]
	public static extern void QPainter_DrawTiledPixmap33(Self* c_this, QRect* param1, QPixmap* param2, QPoint* param3);
	[LinkName("QPainter_DrawPixmapFragments4")]
	public static extern void QPainter_DrawPixmapFragments4(Self* c_this, QPainter__PixmapFragment* fragments, int32 fragmentCount, QPixmap* pixmap, int64 hints);
	[LinkName("QPainter_DrawImage42")]
	public static extern void QPainter_DrawImage42(Self* c_this, QRectF* targetRect, QImage* image, QRectF* sourceRect, int64 flags);
	[LinkName("QPainter_DrawImage43")]
	public static extern void QPainter_DrawImage43(Self* c_this, QRect* targetRect, QImage* image, QRect* sourceRect, int64 flags);
	[LinkName("QPainter_DrawImage44")]
	public static extern void QPainter_DrawImage44(Self* c_this, QPointF* p, QImage* image, QRectF* sr, int64 flags);
	[LinkName("QPainter_DrawImage45")]
	public static extern void QPainter_DrawImage45(Self* c_this, QPoint* p, QImage* image, QRect* sr, int64 flags);
	[LinkName("QPainter_DrawImage46")]
	public static extern void QPainter_DrawImage46(Self* c_this, int32 x, int32 y, QImage* image, int32 sx);
	[LinkName("QPainter_DrawImage52")]
	public static extern void QPainter_DrawImage52(Self* c_this, int32 x, int32 y, QImage* image, int32 sx, int32 sy);
	[LinkName("QPainter_DrawImage62")]
	public static extern void QPainter_DrawImage62(Self* c_this, int32 x, int32 y, QImage* image, int32 sx, int32 sy, int32 sw);
	[LinkName("QPainter_DrawImage72")]
	public static extern void QPainter_DrawImage72(Self* c_this, int32 x, int32 y, QImage* image, int32 sx, int32 sy, int32 sw, int32 sh);
	[LinkName("QPainter_DrawImage82")]
	public static extern void QPainter_DrawImage82(Self* c_this, int32 x, int32 y, QImage* image, int32 sx, int32 sy, int32 sw, int32 sh, int64 flags);
	[LinkName("QPainter_DrawText42")]
	public static extern void QPainter_DrawText42(Self* c_this, QRectF* r, int32 flags, libqt_string text, QRectF* br);
	[LinkName("QPainter_DrawText43")]
	public static extern void QPainter_DrawText43(Self* c_this, QRect* r, int32 flags, libqt_string text, QRect* br);
	[LinkName("QPainter_DrawText72")]
	public static extern void QPainter_DrawText72(Self* c_this, int32 x, int32 y, int32 w, int32 h, int32 flags, libqt_string text, QRect* br);
	[LinkName("QPainter_DrawText32")]
	public static extern void QPainter_DrawText32(Self* c_this, QRectF* r, libqt_string text, QTextOption* o);
	[LinkName("QPainter_BoundingRect32")]
	public static extern QRectF QPainter_BoundingRect32(Self* c_this, QRectF* rect, libqt_string text, QTextOption* o);
	[LinkName("QPainter_SetRenderHint2")]
	public static extern void QPainter_SetRenderHint2(Self* c_this, int64 hint, bool on);
	[LinkName("QPainter_SetRenderHints2")]
	public static extern void QPainter_SetRenderHints2(Self* c_this, int64 hints, bool on);
}
public struct QPainter__PixmapFragment
{
	[LinkName("QPainter__PixmapFragment_Create")]
	public static extern QPainter__PixmapFragment QPainter__PixmapFragment_Create(QPointF* pos, QRectF* sourceRect);
	[LinkName("QPainter__PixmapFragment_Create3")]
	public static extern QPainter__PixmapFragment QPainter__PixmapFragment_Create3(QPointF* pos, QRectF* sourceRect, double scaleX);
	[LinkName("QPainter__PixmapFragment_Create4")]
	public static extern QPainter__PixmapFragment QPainter__PixmapFragment_Create4(QPointF* pos, QRectF* sourceRect, double scaleX, double scaleY);
	[LinkName("QPainter__PixmapFragment_Create5")]
	public static extern QPainter__PixmapFragment QPainter__PixmapFragment_Create5(QPointF* pos, QRectF* sourceRect, double scaleX, double scaleY, double rotation);
	[LinkName("QPainter__PixmapFragment_Create6")]
	public static extern QPainter__PixmapFragment QPainter__PixmapFragment_Create6(QPointF* pos, QRectF* sourceRect, double scaleX, double scaleY, double rotation, double opacity);
}